# xmuoj-pilot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-release.yml  fetch-ac-library.yml
ac-library/: 7105.json  7106.json  7107.json  7108.json  7109.json  7110.json  7111.json  7112.json  7113.json  7114.json  7115.json  7116.json  7117.json  7118.json  7119.json  7120.json  7121.json  7122.json  7123.json  7124.json  7125.json  7126.json  7127.json  7128.json  7129.json  7130.json  7131.json  7132.json  7133.json  7134.json  7135.json  7136.json  7137.json  7138.json  7139.json  7140.json  7141.json  7142.json  7143.json  7144.json  (+166 more)
scripts/: api_smoke_from_env.py  build.ps1  build.py  fetch_ac_library.py
src/xmuoj_pilot/: ac_library.py  cli.py  config.py  main.py  storage.py
src/xmuoj_pilot/ai/: __init__.py  provider.py
src/xmuoj_pilot/client/: __init__.py  base.py  xmuoj.py
src/xmuoj_pilot/models/: __init__.py  contest.py  problem.py  submission.py
src/xmuoj_pilot/services/: __init__.py  auth.py  contest.py  problem.py  submission.py
src/xmuoj_pilot/ui/: __init__.py  console.py  prompt.py  select.py
